Update school directory API paths and docs to match/follow pattern
